# erbsland-unittest

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  CNAME  COPYRIGHT.md  LICENSE.md  README.md  erbsland-unittestConfig.cmake.in  genindex.html  index.html  install.cmake  objects.inv  search.html  searchindex.js  security_hashes.txt  tests.cmake
.doctrees/: environment.pickle  index.doctree
.doctrees/chapters/: advanced-usages.doctree  changelog.doctree  classes-reference.doctree  cmake-integration.doctree  command-line-options.doctree  feedback.doctree  file-helpers.doctree  github-integration.doctree  goals.doctree  license.doctree  macros-for-tests.doctree  macros-reference.doctree  namespaces.doctree  preface.doctree  quick-start.doctree  requirements.doctree  structure-and-naming.doctree  text-helpers.doctree  the-unittest-class.doctree
.doctrees/chapters/get-started/: 01-project-structure.doctree  02-cmake-configuration.doctree  03-write-the-test.doctree  04-build-the-test.doctree  05-run-the-test.doctree  06-whats-next.doctree  index.doctree
.doctrees/chapters/reference/: classes-reference.doctree  file-helpers.doctree  index.doctree  macros-reference.doctree  namespaces.doctree  text-helpers.doctree
.github/: FUNDING.yml
.github/workflows/: build-docs.yml  ci.yml
_sources/: index.rst.txt
_sources/chapters/: changelog.rst.txt  cmake-integration.rst.txt  command-line-options.rst.txt  feedback.rst.txt  file-helpers.rst.txt  goals.rst.txt  license.rst.txt  macros-for-tests.rst.txt  namespaces.rst.txt  requirements.rst.txt  structure-and-naming.rst.txt  text-helpers.rst.txt
_sources/chapters/get-started/: 01-project-structure.rst.txt  02-cmake-configuration.rst.txt  03-write-the-test.rst.txt  04-build-the-test.rst.txt  05-run-the-test.rst.txt  06-whats-next.rst.txt  index.rst.txt
_sources/chapters/reference/: classes-reference.rst.txt  file-helpers.rst.txt  index.rst.txt  macros-reference.rst.txt  text-helpers.rst.txt
breathe/doxygen/: erbsland-unittest.cfg
breathe/doxygen/erbsland-unittest/xml/: Doxyfile.xml  _file_helper_8cpp.xml  _file_helper_8hpp.xml  _macros_8hpp.xml  _text_helper_8cpp.xml  _text_helper_8hpp.xml  _unit_test_8cpp.xml  _unit_test_8hpp.xml  all_8hpp.xml  classerbsland_1_1unittest_1_1_unit_test.xml  dir_07da06a5c2678dad789feaeb36cb4bb4.xml  dir_b1ace6ee297760975ab9205cfa76456c.xml  dir_df46d0b236c90952d596c174be385cbe.xml  fwd_8hpp.xml  index.xml  namespaceerbsland.xml  namespaceerbsland_1_1unittest.xml  namespaceerbsland_1_1unittest_1_1fh.xml  namespaceerbsland_1_1unittest_1_1fh_1_1_0d1.xml  (+1 more)
chapters/: advanced-usages.html  changelog.html  classes-reference.html  cmake-integration.html  command-line-options.html  feedback.html  file-helpers.html  github-integration.html  goals.html  license.html  macros-for-tests.html  macros-reference.html  namespaces.html  preface.html  quick-start.html  requirements.html  structure-and-naming.html  text-helpers.html  the-unittest-class.html
chapters/get-started/: 01-project-structure.html  02-cmake-configuration.html  03-write-the-test.html  04-build-the-test.html  05-run-the-test.html  06-whats-next.html  index.html
chapters/reference/: classes-reference.html  file-helpers.html  index.html  macros-reference.html  namespaces.html  text-helpers.html
cmake/: compiler-options.cmake  debug-warnings.cmake  generate_unittest_metadata.py  install.cmake  tests.cmake  unittest.cmake
doc/: conf.py  index.rst  requirements-doc.in  requirements-doc.txt  requirements.in  requirements.txt
doc/chapters/: advanced-usages.rst  cmake-integration.rst  command-line-options.rst  github-integration.rst  goals.rst  license.rst  macros-reference.rst  preface.rst  quick-start.rst  requirements.rst  structure-and-naming.rst  the-unittest-class.rst
doc/chapters/get-started/: 02-cmake-configuration.rst  03-write-the-test.rst  04-build-the-test.rst  05-run-the-test.rst  06-whats-next.rst  index.rst
doc/chapters/reference/: index.rst  macros-reference.rst
include/erbsland/: all_unittest.hpp
include/erbsland/unittest/: FileHelper.hpp  TextHelper.hpp  UnitTest.hpp  all.hpp  fwd.hpp
src/erbsland/unittest/: CMakeLists.txt  FileHelper.cpp  FileHelper.hpp  TextHelper.cpp  TextHelper.hpp  UnitTest.cpp  UnitTest.hpp  all.hpp  fwd.hpp
src/erbsland/unittest/impl/: AssertContext.cpp  AssertContext.hpp  AssertFailed.hpp  AssertFlags.hpp  AssertResult.hpp  CMakeLists.txt  Console.cpp  Console.hpp  ConsoleColor.cpp  ConsoleColor.hpp  ConsoleLine.cpp  ConsoleLine.hpp  Controller.cpp  Controller.hpp  Definitions.hpp  Demangle.cpp  Demangle.hpp  ErrorCapture.cpp  ErrorCapture.hpp  Filter.hpp  Macros.hpp  MetaData.cpp  MetaData.hpp  Private.cpp  Private.hpp  Registration.hpp  SourceLocation.hpp  Test.hpp  TestBase.cpp  TestBase.hpp  TestClass.hpp  TestClassBase.cpp  TestClassBase.hpp  TextHelperImpl.cpp  TextHelperImpl.hpp
test/: CMakeLists.txt
test/mock-lib/: CMakeLists.txt
test/mock-lib/src/: ExampleLib.cpp  ExampleLib.hpp  ExamplePriority.hpp
test/use-basic/: CMakeLists.txt
test/use-basic/src/: BasicTest.cpp  ContextTest.cpp  LongTest.cpp  PriorityTest.cpp  TestHelper.hpp  main.cpp
test/use-file-helper/: CMakeLists.txt
test/use-file-helper/data/: test-data-file.txt
test/use-file-helper/src/: ReadFilesTest.cpp  main.cpp
test/use-text-helper/: CMakeLists.txt
test/use-text-helper/src/: TextHelperTest.cpp  main.cpp
tools/development/: cleanup_includes.py  generate_header_files.py  generate_header_files.toml
tools/unittest/: generate_unittest_metadata.py  unittest.cmake
utilities/: README.md  requirements-dev.in  requirements-dev.txt  run.py
utilities/conf/: cleanup.elcl  github_workflows.elcl  pre_commit.elcl  security_hashes.elcl  update_includes.elcl
utilities/dev/: cleanup.py  github_workflows.py  pre_commit.py  rebuild_doc.py  security_hashes.py  update_includes.py
utilities/lib/cleanup/: __init__.py  cmake_cleanup.py  config.py  include_cleanup.py
utilities/tests/: __init__.py  test_config_helpers.py  test_pre_commit.py  test_update_includes.py
