# Copyright © 2023-2025 Tobias Erbsland https://erbsland.dev/ and EducateIT GmbH https://educateit.ch/
# According to the copyright terms specified in the file "COPYRIGHT.md".
# SPDX-License-Identifier: LGPL-3.0-or-later

add_subdirectory(mock-lib)
add_subdirectory(use-basic)
add_subdirectory(use-file-helper)

